구글 서치 메뉴얼에 맞는 코드작업완료, sitemap자동생성, description 태그 글마다 수정되어 들어감 , 없다면 기본 default값이 들어감앞으로는 요약글 쓰는것도 권장함

--- a/src/main/resources/templates/PatchNoteBoard/patchNoteDetails.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchNoteDetails.html
@@ -78,6 +78,30 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/patchnote.js}"></script>
+
+    <script th:inline="javascript">
+
+        function myFunction() {
+            document.title = [[${patchboard.getTitle()}]]
+
+            var description = [[${patchboard.getDescription()}]]
+
+            if(description == "" || description == null){
+                document.getElementById("description").setAttribute("content", "패치노트글입니다.")
+                document.getElementById("ogDescription").setAttribute("content", "패치노트글입니다.")
+            }else {
+                document.getElementById("description").setAttribute("content", description)
+                document.getElementById("ogDescription").setAttribute("content", description)
+            }
+
+        }
+
+        myFunction();
+
+    </script>
+
+
+
 </th:block>
 
 
