--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -13,18 +13,22 @@
     
     <!-- 구글 애드센스 코드-->
 
+    <!-- 카카오 메타데이터들-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://ybloglab.shop/">
-    <meta property="og:title" content="YBlogLab">
+    <meta id="ogTitle" property="og:title" content="YBlogLab">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://ybloglab.shop/img/YLabLogo.png">
-    <meta property="og:description" content="포트폴리오용 개인 블로그" />
+    <meta id="ogDescription" property="og:description" content="포트폴리오용 개인 블로그" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- 카카오 메타데이터들-->
+
 
     <!-- 구글 검색 노출을 위한 meta,title 데이터들-->
     <title>스프링부트 포트폴리오, 기술, 개인 블로그"</title>
     <meta
+            id="description"
             name="description"
             content="포트폴리오용 개인블로그, 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고
             사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.">
