--- a/src/main/resources/templates/PatchNoteBoard/patchWrite.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchWrite.html
@@ -50,6 +50,8 @@
         <div class="form-group text-light font-weight-bold bg-dark text-center rounded">
             <label for="title">[제목]</label>
             <input type="text" class="form-control bg-dark text-light" id="title">
+            <label for="boardDescription">설명(없어도 괜찮습니다.)</label>
+            <input type="text" class="form-control bg-dark text-light text-center" id="boardDescription">
         </div>
         <textarea class="summernote" rows="5" id="content"></textarea>
         <button type="button" class="btn btn-warning btn-block" onclick="patchnoteWrite()">작성</button>
