--- a/src/main/resources/templates/PortfolioBoard/boardPortModifyDetails.html
+++ b/src/main/resources/templates/PortfolioBoard/boardPortModifyDetails.html
@@ -45,6 +45,8 @@
   <div class="form-group text-light font-weight-bold bg-dark text-center">
     <label for="title">[제목]</label>
     <input type="text" class="form-control bg-dark text-light text-center" th:value="${portboard.getTitle()}" id="title">
+    <label for="boardDescription">설명(없어도 괜찮습니다.)</label>
+    <input type="text" class="form-control bg-dark text-light text-center" id="boardDescription">
   </div>
   <div class="form-group">
     <textarea class="form-control summernote" rows="5" id="content" th:utext="${portboard.getContent()}"></textarea>
