--- a/src/main/resources/templates/PortfolioBoard/portboardDetails.html
+++ b/src/main/resources/templates/PortfolioBoard/portboardDetails.html
@@ -79,8 +79,30 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
   <script type="text/javascript" th:src="@{/js/main.js}"></script>
-</th:block>
 
+  <script th:inline="javascript">
+
+    function myFunction() {
+      document.title = [[${portboard.getTitle()}]]
+
+      var description = [[${portboard.getDescription()}]]
+
+      if(description == "" || description == null){
+        document.getElementById("description").setAttribute("content", "기술게시판글입니다.")
+        document.getElementById("ogDescription").setAttribute("content", "기술게시판글입니다.")
+      }else {
+        document.getElementById("description").setAttribute("content", description)
+        document.getElementById("ogDescription").setAttribute("content", description)
+      }
+
+    }
+
+    myFunction();
+
+  </script>
+
+
+</th:block>
 
 
 <div layout:fragment="content">
