오늘 구글 서치 메뉴얼에 맞춘 게시판 글 대강 마무리

--- a/src/main/resources/templates/PatchNoteBoard/patchNoteDetails.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchNoteDetails.html
@@ -82,7 +82,9 @@
     <script th:inline="javascript">
 
         function myFunction() {
-            document.title = [[${patchboard.getTitle()}]]
+            var boardTitle =  [[${patchboard.getTitle()}]]
+            document.title = boardTitle
+            document.getElementById("ogTitle").setAttribute("content", boardTitle)
 
             var description = [[${patchboard.getDescription()}]]
 
