--- a/src/main/resources/templates/board/mBoardMain.html
+++ b/src/main/resources/templates/board/mBoardMain.html
@@ -31,6 +31,19 @@
             height: auto;
         }
 
+        .boardMainBox::-webkit-scrollbar {
+            width: 7px;
+        }
+
+        .boardMainBox::-webkit-scrollbar-thumb{
+            background-color: #983106;
+            border-radius: 10px;
+        }
+
+        .boardMainBox::-webkit-scrollbar-track{
+            background-color: #153040;
+        }
+
         .mobileHeader{
             background-color: black;
             text-align: center;
