--- a/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
@@ -20,6 +20,7 @@
     }
 
     .leftDiv{
+    overflow: auto;
     width: 70vw;
     height: 100%;
     float: left;
@@ -29,6 +30,19 @@
     background-repeat: no-repeat;
     border-right: 1px solid white;
     }
+    .leftDiv::-webkit-scrollbar {
+        width: 7px;
+    }
+
+    .leftDiv::-webkit-scrollbar-thumb{
+        background-color: #983106;
+        border-radius: 10px;
+    }
+
+    .leftDiv::-webkit-scrollbar-track{
+        background-color: #153040;
+    }
+
 
     .leftDiv h1{
     color: white;
