--- a/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
+++ b/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
@@ -23,12 +23,27 @@
       width: 70vw;
       height: 100%;
       float: left;
+      overflow: auto;
       background-image: url([[@{/img/newBackpiture.jpg}]]);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       border-right: 1px solid white;
     }
+
+    .leftDiv::-webkit-scrollbar {
+      width: 7px;
+    }
+
+    .leftDiv::-webkit-scrollbar-thumb{
+      background-color: #983106;
+      border-radius: 10px;
+    }
+
+    .leftDiv::-webkit-scrollbar-track{
+      background-color: #153040;
+    }
+
 
     .leftDiv h1{
       color: white;
