--- a/src/main/resources/templates/board/boardMain.html
+++ b/src/main/resources/templates/board/boardMain.html
@@ -11,6 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+
         p{
             color: white;
         }
@@ -21,6 +22,7 @@
         }
 
         .leftDiv{
+            overflow: auto;
             width: 70vw;
             height: 100%;
             float: left;
@@ -31,6 +33,20 @@
             border-right: 1px solid white;
         }
 
+        .leftDiv::-webkit-scrollbar {
+            width: 7px;
+        }
+
+        .leftDiv::-webkit-scrollbar-thumb{
+            background-color: #983106;
+            border-radius: 10px;
+        }
+
+        .leftDiv::-webkit-scrollbar-track{
+            background-color: #153040;
+        }
+
+
         .leftDiv h1{
             color: white;
             font-size: 2vw;
@@ -39,6 +55,7 @@
         }
 
         .rightDiv{
+            overflow: auto;
             text-align: center;
             width: 30vw;
             height: 100%;
