--- a/src/main/resources/templates/board/boardModifyDetails.html
+++ b/src/main/resources/templates/board/boardModifyDetails.html
@@ -47,7 +47,7 @@
       <label for="title">[제목]</label>
       <input type="text" class="form-control bg-dark text-light text-center" th:value="${board.getTitle()}" id="title">
       <label for="boardDescription">설명(없어도 괜찮습니다.)</label>
-      <input type="text" class="form-control bg-dark text-light text-center" id="boardDescription">
+      <input type="text" class="form-control bg-dark text-light text-center" th:value="${board.getDescription()}" id="boardDescription">
     </div>
     <textarea class="summernote" rows="5" id="content" th:utext="${board.getContent()}"></textarea>
 
