--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,6 +87,12 @@
             font-size: 1vw;
         }
 
+        .search_Div{
+            width: 100vw;
+            margin-left: 5%;
+            margin-top: 5%;
+        }
+
     </style>
 
 </th:block>
@@ -100,7 +106,27 @@
 
     <div class="mainDiv">
         <div class="leftDiv">
+            <!--검색기능 메인에 넣어놓기(검색단어, 게시판)-->
             <a href="/"><h1>YBLOGLAB</h1></a>
+            <a style=" font-size: 1vw;
+            margin-left: 5%;
+            margin-right: 5%;"
+               th:if="${#authorization.expr('isAuthenticated()')} == true"
+               th:href="@{user/info(username=${#authentication.getName()})}"
+               th:text="${#authentication.getName()}+ '님 반갑습니다!' "></a>
+
+            <div class="search_Div">
+                테스트 : <input id="searchTitle" type="text"> <button onclick="searchBoard()">검색</button>
+                <select id="categoryBoard" name="cate">
+                    <!--value 값에 들어간건 Enum방식이기에 꼭 틀리지않게 해주셔야합니다-->
+                    <option value="allboard">모두</option>
+                    <option value="yboard">자유게시판</option>
+                    <option value="skillboard">기술게시판</option>
+                    <option value="portfolio">포트폴리오</option>
+                    <option value="patchnote">공지</option>
+                </select>
+            </div>
+
 
         </div>
         <div class="rightDiv">
