검색기능 추가, 댓글 갯수 제목에 보이기 추가, 날짜 소수점 제거

--- a/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
+++ b/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
@@ -146,7 +146,7 @@
           <div class="boardDiv" >
             <span class="title">제목 :</span> &nbsp; <span th:text="${board.getTitle()}"></span> <br>
             <span>작성자 :</span> &nbsp; <span th:text="${board.getUser().getUsername()}"></span>&nbsp;&nbsp;
-            <span>작성날짜 :</span>&nbsp;  <span th:text="${board.getCreateDate()}"></span>
+            <span>작성날짜 :</span>&nbsp; <span th:text="${#dates.format(board.getCreateDate(), 'yyyy-MM-dd hh:mm:ss')}"></span>
           </div>
         </a>
 
