--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,7 +116,7 @@
                th:text="${#authentication.getName()}+ '님 반갑습니다!' "></a>
 
             <div class="search_Div">
-                테스트 : <input id="searchTitle" type="text"> <button onclick="searchBoard()">검색</button>
+                <input id="searchTitle" type="text"> <button onclick="searchBoard()">검색</button>
                 <select id="categoryBoard" name="cate">
                     <!--value 값에 들어간건 Enum방식이기에 꼭 틀리지않게 해주셔야합니다-->
                     <option value="allboard">모두</option>
