사이트 서버 내리기 버튼, 로그파일 다운로드 받기 만들기 성공

--- a/src/main/resources/templates/admin/userManage.html
+++ b/src/main/resources/templates/admin/userManage.html
@@ -108,6 +108,24 @@
                     id="useremailban"
                     onclick="useremailban()">해당 유저 이메일 벤하기</button>
             <br/>
+            <button
+                    type="button"
+                    class="btn btn-outline-danger"
+                    id="all_clear_BRlimit"
+                    onclick="all_clear_BRlimit()">댓글, 게시판 제한 테이블 모두삭제</button>
+            <br/>
+            <button
+                    type="button"
+                    class="btn btn-outline-danger"
+                    id="logfile"
+                    onclick="logfile()">로그파일 다운로드</button>
+            <br/>
+            <button
+                    type="button"
+                    class="btn btn-outline-danger"
+                    id="webShutDown"
+                    onclick="webShutDown()">웹서버 비상 종료!!!</button>
+            <br/>
         </div>
 
     </div>
