--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
+
 <footer th:fragment="footerFragment">
 
+
+    <div style="max-width: 700px; margin: 0 auto;">
+        <a href="/">YBLOGLAB</a> &nbsp;&nbsp;
+        <a href="https://velog.io/@ddpound">ddpound.log</a>
+    </div>
 </footer>
 </html>
