--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,5 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- /서머노트 -->
+
+  <div style="background-color: black; color: white">
+    <a href="/">YBLOGLAB</a>
+    <a href="/auth/patchnote">공지</a>
+    <a href="/auth/boardmain">자유게시판</a>
+    <a href="/auth/skillboard">기술게시판</a>
+    <a th:if="${#authorization.expr('isAuthenticated()')} == false" href="/auth/loginForm">로그인</a>
+    <a th:if="${#authorization.expr('isAuthenticated()')} == true" href="/board/write">글쓰기</a>
+  </div>
+
+
 </header>
 </html>
