프론트 변경중 많은 디자인과 버튼 이미지, 이미지 추가중입니다. 40퍼센트 완료했습니다

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,9 +5,13 @@
 <footer th:fragment="footerFragment">
 
 
-    <div style="max-width: 700px; margin: 0 auto;">
-        <a href="/">YBLOGLAB</a> &nbsp;&nbsp;
-        <a href="https://velog.io/@ddpound">ddpound.log</a>
+    <div class="footermainDiv">
+        <div class="footerChildDiv1">
+            <a href="https://github.com/ddpound"><img src="/img/githubLogo.png" > GitHub</a> &nbsp;&nbsp;
+            <a href="https://velog.io/@ddpound"><img src="/img/velogLogo.png" > ddpound.log</a>
+            <a href="https://mail.google.com/"><img src="/img/gmailLogo.png" > ybloglab@gmail.com</a>
+        </div>
+
     </div>
 </footer>
 </html>
