--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -57,18 +57,15 @@
 
         html, body{
             overflow: visible;
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             margin : 0;
             padding: 0;
 
 
         }
 
-        header{
 
-
-        }
         /* 이렇게 굳이 나눈 이유는 header자체는  css flex가 안먹혀서 바꿔줬다*/
         .parentSec{
             width: 1100px;
@@ -79,7 +76,7 @@
 
          .topSec{
              height: 100px;
-             width: 200px;
+             width: 100px;
              left: 0;
              right: 0;
              margin: 20px auto;
@@ -90,10 +87,19 @@
              height: 100px;
          }
 
+         .mainbloglogo{
+             transition: all 0.2s;
+         }
+
+         .topSec .mainbloglogo:hover{
+             content: url("/img/YlabLogoHover.png");
+             height: 101px;
+         }
+
 
         .bottomSec{
             margin: 0 auto;
-            width: 800px;
+            width: 700px;
         }
 
         .bottomSec a{
@@ -125,6 +131,10 @@
             transition: all 0.8s;
         }
 
+        .bottomSec a:hover{
+            color: mediumpurple;
+        }
+
         .bottomSec a:hover::after{
             max-width: 100%;
         }
@@ -150,12 +160,138 @@
             margin: 0 auto;
         }
 
+
         .loginBar a:visited{
             text-decoration: none;
         }
         .loginBar a:link{
             text-decoration: none;
         }
+
+        .footermainDiv{
+            width: 1100px;
+            margin: 50px auto;
+            position: relative;
+        }
+
+        .footerChildDiv1{
+            width: auto;
+            height: 150px;
+            margin: 15px auto;
+        }
+
+        .footerChildDiv1 a{
+            position: relative;
+            color: black;
+            font-family: 'Gugi', cursive;
+            font-size: 20px;
+            text-decoration: none;
+        }
+        .footerChildDiv1 img{
+            height: 35px;
+        }
+
+
+        .footerChildDiv1 a::after{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            content: attr(title);
+            color: mediumpurple;
+            border-bottom: 4px solid mediumpurple;
+            max-width: 0;
+            overflow: hidden;
+            transition: all 0.8s;
+        }
+
+        .footerChildDiv1 a:hover::after{
+            max-width: 100%;
+        }
+
+
+        .footerChildDiv1 a:link{
+            text-decoration: none;
+        }
+        .footerChildDiv1 a:visited{
+            text-decoration: none;
+        }
+
+        /* 즉 너비가 max-width 미만일때 적용을 말한다 */
+        @media screen and (max-width: 1100px) {
+
+        }
+
+        /* 즉 너비가 max-width 미만일때 적용을 말한다 */
+        @media screen and (max-width: 1100px) {
+            .parentSec{
+                width: 500px;
+                margin: 0 auto;
+
+                position: relative;
+            }
+
+            .topSec{
+                height: 100px;
+                width: 100px;
+                left: 0;
+                right: 0;
+                margin: 20px auto;
+            }
+
+            .topSec img{
+                height: 100px;
+            }
+
+            .bottomSec{
+                text-align: center;
+                width: 500px;
+                margin: 0 auto;
+            }
+
+            .bottomSec a{
+                position: relative;
+                color: black;
+                margin: 0 5px;
+                font-family: 'Gugi', cursive;
+                font-size: 22px;
+
+                text-decoration: none;
+                line-height: 40px;
+                display: inline-block;
+                box-sizing: border-box;
+            }
+
+            .bottomSec a::after{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 40px;
+                line-height: 40px;
+                content: attr(title);
+                color: mediumpurple;
+                border-bottom: 1px solid mediumpurple;
+                max-width: 0;
+                overflow: hidden;
+                transition: all 0.8s;
+            }
+
+            .footermainDiv{
+                width: 100vw;
+                margin: 50px 0;
+                position: relative;
+            }
+
+
+        }
+
+
+
+
+
 
     </style>
 
