--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,14 +24,26 @@
             background-color: #c2b2f0;
             display: flex;
         }
+        .childmain2{
+            width: 100%;
+        }
+        .childmain3{
+            width: 100%;
+        }
+        .childmain4{
+            width: 100%;
+        }
+        .childmain5{
+            width: 100%;
+        }
 
         .mainImage {
-            width: 500px;
+            width: 45%;
 
         }
 
         .mainImage img{
-            width: 500px;
+            width: 100%;
             height: 500px;
 
             margin: 12px 0 12px 12px;
@@ -39,7 +51,7 @@
 
         .descriptionDiv{
             margin: 12px auto;
-            width: 500px;
+            width: 45%;
             height: 500px;
             text-align: center;
         }
@@ -78,12 +90,12 @@
 
             }
 
-
             .childmain1{
                 width: 100%;
                 display: block;
                 margin: 0 auto;
             }
+
             .mainImage {
                 width: 100%;
 
@@ -92,6 +104,37 @@
                 width: 100%;
                 height: 500px;
                 margin: 0;
+            }
+
+            .descriptionDiv{
+                width: 100%;
+
+            }
+
+        }
+
+        @media screen and (max-width: 560px) {
+            .parentMain{
+                width: 100vw;
+                margin: 40px 0;
+            }
+
+            .descriptionDiv{
+                height: auto;
+            }
+
+            .decripWrite{
+                width: 100%;
+                height: auto;
+            }
+
+            .animaImage{
+                width: 100%;
+            }
+
+            .search_Div{
+                width: 100%;
+                margin: 10px auto;
             }
 
 
@@ -133,7 +176,7 @@
 
                     <label>다양한 분야들을 공부하고 기록하며</label>
 
-                    <label>발전해 나가는 게 저의 목표입니다.</label><br>
+                    <label>발전해 나가는 게 목표입니다.</label><br>
 
                 </div>
 
