--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -98,6 +98,7 @@
 
 
         .bottomSec{
+            position: relative;
             margin: 0 auto;
             width: 700px;
         }
@@ -144,6 +145,16 @@
         }
         .bottomSec a:link{
             text-decoration: none;
+        }
+
+        .toggleDiv{
+            width: 50%;
+            height: 0;
+            margin: 0 auto;
+            visibility: hidden;
+        }
+        .toggleDiv img{
+            width: 100%;
         }
 
         .loginBar{
@@ -219,6 +230,24 @@
             text-decoration: none;
         }
 
+        .footerTopButton{
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+
+        .menuDiv{
+            position: fixed;
+            top: 0px;
+            left: -55vw;
+            z-index: 0;
+            width: 55vw;
+            height: 100vh;
+            background-color: #c2b2f0;
+            visibility: hidden;
+            transition: all 1s;
+        }
+
         /* 즉 너비가 max-width 미만일때 적용을 말한다 */
         @media screen and (max-width: 1100px) {
 
@@ -229,7 +258,6 @@
             .parentSec{
                 width: 500px;
                 margin: 0 auto;
-
                 position: relative;
             }
 
@@ -288,6 +316,64 @@
 
         }
 
+        /*560미만 즉 모바일 기기들을 말한다*/
+        @media screen and (max-width: 560px) {
+            .parentSec{
+                width: 100vw;
+                margin: 0 auto;
+
+                position: relative;
+            }
+
+            .bottomSec{
+                width: 100%;
+                height: 0;
+                position: relative;
+                visibility: hidden;
+
+            }
+
+            .toggleDiv{
+                position: fixed;
+                background-color: white;
+                border-radius: 50px;
+                opacity: 0.8;
+                left: 20px;
+                bottom: 40px;
+                width: 50px;
+                visibility: visible;
+            }
+
+            .toggleDiv img{
+                width: 100%;
+            }
+
+            .menuDiv{
+                position: fixed;
+                visibility: visible;
+                z-index: 0;
+                width: 55vw;
+                height: 100vh;
+                background-color: black;
+            }
+
+            .menuDiv a{
+                font-family: 'Gugi', cursive;
+                color: white;
+            }
+
+            .menuDiv li{
+
+                margin: 5px 0;
+            }
+
+            .menuDiv h2{
+                margin: 5px 0 0 5px;
+                font-family: 'Gugi', cursive;
+                color: white
+            }
+
+        }
 
 
 
