--- a/src/main/resources/templates/skillBoard/skillBoardMain.html
+++ b/src/main/resources/templates/skillBoard/skillBoardMain.html
@@ -11,6 +11,38 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+        .mainBoardDiv{
+            width: 1100px;
+            margin: 100px auto;
+        }
+
+        .mainBoardDiv a{
+            font-size: 30px;
+            font-family: 'Do Hyeon', sans-serif;
+            color: black;
+            text-decoration: none;
+        }
+        .mainBoardDiv a:hover{
+            text-decoration: none;
+        }
+        .mainBoardDiv a:link{
+            text-decoration: none;
+        }
+        .mainBoardDiv a:visited{
+            text-decoration: none;
+        }
+
+        .boardDivs{
+
+        }
+
+        .boardDiv{
+            width: 500px;
+            margin: 30px auto;
+            background-color: #c2b2f0;
+            border: 3px solid black;
+        }
+
 
     </style>
 
